cm install updated