@@ -50,4 +50,19 @@ com.cloudera.cmf.db.password=password
 Starting cloudera-scm-server (via systemctl):              [  OK  ]
 
 ```
+```aidl
+[root@lion cloudera-scm-server]# cat cloudera-scm-server.log | grep "Starting SCM Server"
+2018-03-16 09:31:30,804 INFO main:com.cloudera.server.cmf.Main: Starting SCM Server. JVM Args: [-Dlog4j.configuration=file:/etc/cloudera-scm-server/log4j.properties, -Dfile.encoding=UTF-8, -Dcmf.root.logger=INFO,LOGFILE, -Dcmf.log.dir=/var/log/cloudera-scm-server, -Dcmf.log.file=cloudera-scm-server.log, -Dcmf.jetty.threshhold=WARN, -Dcmf.schema.dir=/usr/share/cmf/schema, -Djava.awt.headless=true, -Djava.net.preferIPv4Stack=true, -Dpython.home=/usr/share/cmf/python, -XX:+UseConcMarkSweepGC, -XX:+UseParNewGC, -XX:+HeapDumpOnOutOfMemoryError, -Xmx2G, -XX:MaxPermSize=256m, -XX:+HeapDumpOnOutOfMemoryError, -XX:HeapDumpPath=/tmp, -XX:OnOutOfMemoryError=kill -9 %p], Args: [], Version: 5.13.2 (#6 built by jenkins on 20180205-1145 git: caa35e134bfc8a112ad1f3cae7d80a2b1f30796f)
+```
 
+
+```aidl
+[root@lion cloudera-scm-server]# cat cloudera-scm-server.log | grep "Starting SCM Server"
+2018-03-16 09:31:30,804 INFO main:com.cloudera.server.cmf.Main: Starting SCM Server. JVM Args: [-Dlog4j.configuration=file:/etc/cloudera-scm-server/log4j.properties, -Dfile.encoding=UTF-8, -Dcmf.root.logger=INFO,LOGFILE, -Dcmf.log.dir=/var/log/cloudera-scm-server, -Dcmf.log.file=cloudera-scm-server.log, -Dcmf.jetty.threshhold=WARN, -Dcmf.schema.dir=/usr/share/cmf/schema, -Djava.awt.headless=true, -Djava.net.preferIPv4Stack=true, -Dpython.home=/usr/share/cmf/python, -XX:+UseConcMarkSweepGC, -XX:+UseParNewGC, -XX:+HeapDumpOnOutOfMemoryError, -Xmx2G, -XX:MaxPermSize=256m, -XX:+HeapDumpOnOutOfMemoryError, -XX:HeapDumpPath=/tmp, -XX:OnOutOfMemoryError=kill -9 %p], Args: [], Version: 5.13.2 (#6 built by jenkins on 20180205-1145 git: caa35e134bfc8a112ad1f3cae7d80a2b1f30796f)
+```
+
+```aidl
+[root@lion cloudera-scm-server]# cat cloudera-scm-server.log | grep -i "Started Jetty Server"
+2018-03-16 09:33:12,882 INFO WebServerImpl:com.cloudera.server.cmf.WebServerImpl: Started Jetty server.
+
+```
